Cleaned up the Event files